WIP: Nav, picture and paragraph added

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,13 @@
 // Navigation Styles here
+
+.navigation {
+    display: flex;
+    justify-content: space-around;
+    margin: 20px;
+    a {
+        margin: 20px;
+        color: black;
+        font-size: 1.5rem;
+        margin: 10px;
+    }
+}
