--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,17 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+.navigation {
+  display: flex;
+  justify-content: space-around;
+  margin: 20px;
+}
+.navigation a {
+  margin: 20px;
+  color: black;
+  font-size: 1.5rem;
+  margin: 10px;
+}
 .footer {
   width: 100%;
   border-top: 2px dashed silver;
@@ -179,6 +190,16 @@ img {
   font-size: 1.6rem;
   padding: 20px;
 }
+.home .top-content {
+  border-top: 2px dashed grey;
+  width: 80%;
+  margin-left: 40px;
+  margin-bottom: 50px;
+}
+.home .paragraph {
+  border-bottom: 2px dashed grey;
+  font-size: 1.6rem;
+}
 .home .content-section {
   margin: 30px 0;
   display: flex;
@@ -188,6 +209,7 @@ img {
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
+  margin-top: 35px;
 }
 .home .content-section .img-content {
   width: 48%;
