--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,5 +1,17 @@
 .home {
 
+  .top-content {
+    border-top: 2px dashed grey;
+    width: 80%;
+    margin-left: 40px;
+    margin-bottom: 50px;
+  }
+
+  .paragraph {
+    border-bottom: 2px dashed grey;
+    font-size: 1.6rem;
+  }
+
   .content-section {
     margin: 30px 0;
     display: flex;
@@ -11,6 +23,8 @@
     .text-content {
       width: 48%;
       padding-right: 1%;
+      margin-top: 35px;
+      
     }
 
     .img-content {
@@ -57,5 +71,8 @@
       width: 30%;
       margin-bottom: 30px;
     }
+
+    
+   
   }
 }// home
