--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,16 @@
+.button {
+  background: #17A2B8;
+  width: 100%;
+  height: 3.5rem;
+  display: flex;
+  justify-content: center;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  color: #FFFFFF;
+  font-size: 2rem;
+  align-items: center;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -190,14 +203,18 @@ img {
   font-size: 1.6rem;
   padding: 20px;
 }
+body {
+  max-width: 900px;
+  margin: 0 auto;
+}
 .home .top-content {
-  border-top: 2px dashed grey;
+  border-top: 2px dashed #C0C0C0;
   width: 80%;
   margin-left: 40px;
   margin-bottom: 50px;
 }
 .home .paragraph {
-  border-bottom: 2px dashed grey;
+  border-bottom: 2px dashed #C0C0C0;
   font-size: 1.6rem;
 }
 .home .content-section {
@@ -246,4 +263,17 @@ img {
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+.home .content-pick .btn {
+  background: #17A2B8;
+  width: 100%;
+  height: 3.5rem;
+  display: flex;
+  justify-content: center;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  color: #FFFFFF;
+  font-size: 2rem;
+  align-items: center;
 }
