mobile header done

--- a/css/index.css
+++ b/css/index.css
@@ -192,6 +192,20 @@ img {
   font-size: 1.5rem;
   margin: 10px;
 }
+@media (max-width: 500px) {
+  .navigation {
+    display: flex;
+    flex-direction: column;
+    margin-left: 75px;
+  }
+  .navigation a {
+    margin: 25px;
+  }
+  .fun {
+    display: flex;
+    justify-content: center;
+  }
+}
 .footer {
   width: 100%;
   border-top: 2px dashed silver;
@@ -206,6 +220,13 @@ img {
 body {
   max-width: 900px;
   margin: 0 auto;
+}
+@media (max-width: 500px) {
+  body {
+    background: purple;
+    max-width: 500px;
+    margin: 0 auto;
+  }
 }
 .home .top-content {
   border-top: 2px dashed #C0C0C0;
