--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,12 @@
 body {
   max-width: 900px;
   margin: 0 auto;
+
+  @media @mobile {
+    background: purple;
+    max-width: 500px;
+    margin: 0 auto;
+  }
 }
 
 .home {
@@ -82,4 +88,6 @@ body {
     }
    
   }
+
+  
 }// home
