--- a/less/navigation.less
+++ b/less/navigation.less
@@ -10,4 +10,25 @@
         font-size: 1.5rem;
         margin: 10px;
     }
+
+   
+}
+
+@media @mobile {
+    .navigation {
+        display: flex;
+        flex-direction: column;
+        margin-left: 75px;
+        a{
+            margin: 25px;
+        }
+    }
+    .fun{
+        display: flex;
+        justify-content: center;
+    }
+    
+    
+
+   
 }
