--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,11 +3,12 @@ body {
   margin: 0 auto;
 
   @media @mobile {
-    background: purple;
     max-width: 500px;
     margin: 0 auto;
+    background-color: red;
   }
 }
+
 
 .home {
 
@@ -78,16 +79,38 @@ body {
     display: flex;
     justify-content: space-between;
 
+    @media @mobile {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      @media @mobile {
+        width: 75%;
+        margin-left: 40px;
+      }
     }
 
     .btn {
       .button();
     }
-   
+
   }
+
+  @media @mobile {
+    max-width: 500px;
+    margin: 0 auto;
+
+    
+  }
+  
 
   
 }// home
+
+
