--- a/less/home-page.less
+++ b/less/home-page.less
@@ -5,7 +5,6 @@ body {
   @media @mobile {
     max-width: 500px;
     margin: 0 auto;
-    background-color: red;
   }
 }
 
@@ -22,6 +21,11 @@ body {
   .paragraph {
     border-bottom: 2px dashed @silver;
     font-size: 1.6rem;
+
+    @media @mobile {
+      width: 80%;
+      margin-left: 50px;
+    }
   }
 
   .content-section {
@@ -30,18 +34,33 @@ body {
     flex-wrap: wrap;
     justify-content: space-between;
 
+    @media @mobile {
+      display: flex;
+      flex-direction: column;
+    }
+
    
     
     .text-content {
       width: 48%;
       padding-right: 1%;
       margin-top: 35px;
+
+      @media @mobile {
+        width: 90%;
+        margin-left: 50px;
+      }
       
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+
+      @media @mobile {
+        width: 90%;
+        margin-left: 50px;
+      }
 
       img {
         border-radius: 10px;
@@ -52,6 +71,8 @@ body {
   .inverse-content {
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
+    display: flex;
+    flex-direction: column-reverse;
 
     .text-content {
       padding-left: 1%;
